WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
18818
REGRESSION (3.1.1-TOT): Character order (float:left ordered after the first letter)
https://bugs.webkit.org/show_bug.cgi?id=18818
Summary
REGRESSION (3.1.1-TOT): Character order (float:left ordered after the first l...
cnep5ll3
Reported
2008-04-30 13:35:38 PDT
Layout of characters wrong. Should be "Le" but "eL" is displayed. "L" is 'dropcap'. I have guessed that it is a CSS problem but I don't know that logic well. WebKit says its version is 3.1.1; the dmg filename is WebKit-SVN-R32698 I have seen this on a few other pages. Miscellaneous additional info including image: at
http://cap-lore.com/lm/
Attachments
Reduction
(104 bytes, text/html)
2008-04-30 20:19 PDT
,
mitz
no flags
Details
Add the first letter container where the first letter was, not necessarily at the beginning
(48.92 KB, patch)
2008-05-08 21:50 PDT
,
mitz
mrowe
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2008-04-30 14:05:21 PDT
<
rdar://problem/5901544
>
mitz
Comment 2
2008-04-30 14:29:26 PDT
Oops, this has nothing to do with :first-letter, just a float issue I guess.
mitz
Comment 3
2008-04-30 20:19:11 PDT
Created
attachment 20907
[details]
Reduction After <
http://trac.webkit.org/changeset/30724
>, :first-letter selects the digit 2, which is the first letter in flow, so both the 1 and the 2 end up in floats. Still, the 1 should come first.
mitz
Comment 4
2008-05-08 21:50:21 PDT
Created
attachment 21031
[details]
Add the first letter container where the first letter was, not necessarily at the beginning
mitz
Comment 5
2008-05-08 22:10:18 PDT
Fixed in <
http://trac.webkit.org/changeset/32992
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug