WebCore:

Reviewed by Mark Rowe.

        - fix https://bugs.webkit.org/show_bug.cgi?id=18818
          <rdar://problem/5901544> REGRESSION (3.1.1-TOT): Character order (float:left ordered after the first letter)

        Test: fast/css/first-letter-float-after-float.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::updateFirstLetter): Changed to add the first
        letter container right before the rest of the text it is taken from,
        instead of at the beginning of the block.

LayoutTests:

        Reviewed by Mark Rowe.

        - test and updated results for https://bugs.webkit.org/show_bug.cgi?id=18818
          <rdar://problem/5901544> REGRESSION (3.1.1-TOT): Character order (float:left ordered after the first letter)

        * ChangeLog:
        * fast/css/first-letter-float-after-float.html: Added.
        * platform/mac-leopard/fast/css/first-letter-skip-out-of-flow-expected.checksum:
        * platform/mac-leopard/fast/css/first-letter-skip-out-of-flow-expected.png:
        * platform/mac/fast/css/first-letter-float-after-float-expected.checksum: Added.
        * platform/mac/fast/css/first-letter-float-after-float-expected.png: Added.
        * platform/mac/fast/css/first-letter-float-after-float-expected.txt: Added.
        * platform/mac/fast/css/first-letter-skip-out-of-flow-expected.txt:



Canonical link: https://commits.webkit.org/26188@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32992 268f45cc-cd09-0410-ab3c-d52691b4dbfc