WebCore/rendering/RenderBlock.cpp
@@ -4231,9 +4231,7 @@ void RenderBlock::updateFirstLetter()
         pseudoStyle->setPosition( StaticPosition ); // CSS2 says first-letter can't be positioned.
         
         RenderObject* firstLetter = RenderFlow::createAnonymousFlow(document(), pseudoStyle); // anonymous box
-        // FIXME: This adds in the wrong place if list markers were skipped above.  Should be
-        // firstLetterContainer->addChild(firstLetter, currChild);
-        firstLetterContainer->addChild(firstLetter, firstLetterContainer->firstChild());
+        firstLetterContainer->addChild(firstLetter, currChild);
         
         // The original string is going to be either a generated content string or a DOM node's
         // string.  We want the original string before it got transformed in case first-letter has
